# car_api

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
bot/: bot.py  handler.py
cars/: manager.py  schemas.py  service.py  views.py
database/: connection.py
models/: car.py
routes/: car.py  notification.py
src/: main.py
src/api/rest/cars/: decorators.py  schemas.py  views.py
src/api/rest/consumable/: decorators.py  schemas.py  views.py
src/api/rest/users/: decorators.py  dependencies.py  schemas.py  views.py
src/core/cars/: entities.py  exception.py  services.py
src/core/consumable/: entities.py  exceptions.py  services.py
src/core/users/: entities.py  exceptions.py  services.py
src/infrastructure/database/: base.py  uow.py
src/infrastructure/database/models/: car.py  consumable.py  user.py
src/infrastructure/database/repositories/: car.py  consumable.py  user.py
src/migrations/: env.py
src/migrations/versions/: 0001_initial.py  0002_new_tables.py  0003_foreing_keys.py
users/: exceptions.py  manager.py  models.py  schemas.py  views.py
